# mrkm25-26

lab1/Lab1_Ostapovets_Olesia/: lab1.ipynb
lab1/bulygin_oleksii/: diffie  diffie_gmp.c
lab2/Lab2_Bondarenko_Kryhin/: .gitignore  aes-example.py  plot_random.py  rsa-dec-session-key.py  rsa-enc-session-key.py  rsa-keygen.py
lab2/Lab2_Doroshenko_Herashchenko_Voloshyn/src/: main.py
lab2/Lab2_Ostapovets_Olesia/: lab2.ipynb
lab2/lab2_Bulygin_Oleksii/: Makefile  crypto_demo  crypto_demo.cpp  report.md
lab3/Lab3_Bondarenko_Kryhin/: .gitignore  README.md  app.py  pyproject.toml  run.sh  setup.sh
lab3/Lab3_Doroshenko_Herashchenko_Voloshyn/: readme.md  requirements.txt
lab3/Lab3_Doroshenko_Herashchenko_Voloshyn/keys/: priv.pem  pub.pem
lab3/Lab3_Doroshenko_Herashchenko_Voloshyn/src/: cli.py  keygen.py  sign.py  utils.py  verify.py
lab3/Lab3_Doroshenko_Herashchenko_Voloshyn/tests/: sample.sig  sample_message.txt  test_control_example.sh
lab3/Lab3_Ostapovets_Olesia/: lab3.ipynb
lab3/lab3_Bulygin_Oleksii/: CMakeLists.txt  Makefile  private_key.txt  public_key.txt  report.md  signature.txt  test.cpp  test_undeniable
lab4/Lab4_Doroshenko_Herashchenko_Voloshyn/src/: main.py
lab4/lab4_Bulygin_Oleksii/: Makefile  report.md  security_tests  security_tests.cpp  undeniable_sig.cpp  undeniable_sig.h
